Bug 216852 - Fix BiquadFilterNode's lowpass & highpass filters
Summary: Fix BiquadFilterNode's lowpass & highpass filters
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Audio (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 212611
  Show dependency treegraph
 
Reported: 2020-09-22 15:17 PDT by Chris Dumez
Modified: 2020-09-22 15:55 PDT (History)
10 users (show)

See Also:


Attachments
Patch (16.10 KB, patch)
2020-09-22 15:24 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2020-09-22 15:17:14 PDT
Fix BiquadFilterNode's lowpass & highpass filters. They incorrectly clamp the resonance to make it positive.
Comment 1 Chris Dumez 2020-09-22 15:24:25 PDT
Created attachment 409411 [details]
Patch
Comment 2 Chris Dumez 2020-09-22 15:54:47 PDT
Comment on attachment 409411 [details]
Patch

Clearing flags on attachment: 409411

Committed r267444: <https://trac.webkit.org/changeset/267444>
Comment 3 Chris Dumez 2020-09-22 15:54:49 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 Radar WebKit Bug Importer 2020-09-22 15:55:23 PDT
<rdar://problem/69397253>